--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<title>Main page</title>
 </head>
 <body>
-<center><h1>Be wise</h1></center>
+<center><h1>Be Silent</h1></center>
 <br/><br/>
-<font style="color:blue"; font-size: 80px; texk-aling: center >!This text is magenta and this SLAVE!</font>
+<font style="color:red"; font-size: 80px; texk-aling: center >!This text is red and this SLAVE!</font>
 <br/><br/>
 <b>version in english</b>
 </body>
