--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <br/><br/>
 <font style="color:red"; font-size: 80px; texk-aling: center >!This text is red and this SLAVE!</font>
 <br/><br/>
+<br/><br/>
+<font style="color:yellow"; font-size:90px; texk-aling: center >Run by slave1 from manster</font>
+<br/><br/>
 <b>version in english</b>
 </body>
 </html>
