adding blue font

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <body>
 <center><h1>Be Silent</h1></center>
 <br/><br/>
-<font style="color:red"; font-size: 80px; texk-aling: center >!This text is red and this SLAVE!</font>
+<font style="color:red"; font-size: 80px; text-aling: center >!This text is red and this SLAVE!</font>
 <br/><br/>
 <br/><br/>
-<font style="color:yellow"; font-size:90px; texk-aling: center >Run by slave1 from manster</font>
+<font style="color:blue"; font-size:90px; text-aling: center >Run by slave1 from manster</font>
 <br/><br/>
-<b>version in english</b>
+<b>thanks for your visit</b>
 </body>
 </html>
