--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <body>
 <center><h1>Be Silent</h1></center>
 <br/><br/>
-<font style="color:red"; font-size: 80px; text-aling: center >!This text is red and this SLAVE!</font>
+<font style="color:red; font-size: 200px; text-aling: center; ">!This text is red and this SLAVE!</font>
 <br/><br/>
 <br/><br/>
-<font style="color:blue"; font-size:90px; text-aling: center >Run by slave1 from manster</font>
+<font style="color:blue; font-size: 100px; text-aling: center;" >Run by slave1 from manster</font>
 <br/><br/>
 <b>thanks for your visit</b>
 </body>
